--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "howler": "^2.2.3",
     "https": "^1.0.0",
     "request": "^2.88.2",
     "sass": "^1.58.3",
