--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
-    "howler": "^2.2.3",
+    "localforage": "^1.10.0",
     "request": "^2.88.2",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
